--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -2,6 +2,20 @@
   	color: $textColour;
 	font-family: arial;
 	font-size: 0.9375em;
+	font-weight: bold;
+	background: $bgColour;
+	display: inline-block;
+	text-decoration: none;
+	padding: 5px 8px;
+	text-transform: uppercase;
+	@include border-radius(3px);
+}
+
+@mixin large-button($textColour, $bgColour) {
+  	color: $textColour;
+	font-family: arial;
+	font-size: 1.375em;
+	font-weight: bold;
 	background: $bgColour;
 	display: inline-block;
 	text-decoration: none;
